syntax = "proto3";

package AcFunDanmu.Im.Basic;

message User {
	int32 appId = 1;
	int64 uid = 2;
}
